[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poker"
version = "0.1.0"
description = "Poker hand evaluation and tie-breaking logic"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Patryk" }
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1.9",
]

[tool.setuptools]
packages = ["poker"]

[tool.setuptools.package-dir]
poker = "."
